--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link href="index.css" rel="stylesheet"/>
 </head>
 <body>
-    <div class="card">
-        <div>
-            <img src="images/image-qr-code.png"/>
+    <section>
+        <div class="card">
+            <div>
+                <img src="images/image-qr-code.png" alt="image loading"/>
+            </div>
+            <div class="text_container">
+                <h1>Improve your front-end skills by building projects</h1>
+                <p>Scan the QR code to visit Frontend Mentor and take coding skills to the next level</p>
+            </div>
         </div>
-        <div>
-            <h1>Improve your front-end skills by building projects</h1>
-            <p>Scan the QR code to visit Frontend Mentor and take coding skills to the next level</p>
-        </div>
-    </div>
+    </section>
 </body>
 </html>
